# lenscluster

./: .gitignore  README.md  cluster_solver.py  download_catalogs.py  lenstool_parser.py  pyproject.toml  rank_active_scaling_galaxies.py  run.xsh  run_mock.xsh  utils.py
data/HFF_Pagul21/: CHECKSUMS.md5  SOURCE.txt  magnifications_a2744.cat  magnifications_a370.cat  magnifications_as1063.cat  magnifications_m0416.cat  magnifications_m0717.cat  magnifications_m1149.cat
data/M0416_Bergamini22/: Bergamini22_MACS0416.par  Bergamini22_MACS0416_README.txt  CM_cat_MACSJ0416.cat  best.par  bestopt.par  obs_arcs.cat  para.out
docs/: critical_arc_anisotropic_likelihood.md  pfree_population_to_blend_derivation.tex  probabilistic_family_assignment.md  stage3_pfree_likelihood.tex
notebooks/: hera_kappa_residual_diagnostics.ipynb  replot_truth_recovery_critical_line.ipynb  run_ff_sims_fit.ipynb
scripts/: analyze_literature_family_diagnostics.py  build_ff_sims_lenscluster_inputs.py  build_hff_lenscluster_pars.py  build_hff_master_catalog.py  compare_hff_to_literature.py  make_ff_sims_truth_magnitudes.py  measure_ff_sims_image_magnitudes.py  plot_extra_image_cutouts.py  plot_image_catalog_family_cutouts.py  plot_literature_family_cutouts.py  stage_literature_lenstool_catalogs.py
src/arctrace/: __init__.py  arcfile.py  circlefit.py  cli.py  config.py  errors.py  geometry.py  interactive.py  measure.py  mosaics.py  qa.py  refine.py  regions.py  ridge.py  segmentation.py
tests/: arctrace_synth.py  test_analyze_literature_family_diagnostics.py  test_arctrace_arcfile.py  test_arctrace_circlefit.py  test_arctrace_end_to_end.py  test_arctrace_geometry.py  test_arctrace_regions.py  test_arctrace_segmentation.py  test_build_ff_sims_lenscluster_inputs.py  test_build_hff_image_family_catalog.py  test_build_hff_lenscluster_pars.py  test_build_hff_master_catalog.py  test_cluster_solver_memory.py  test_compare_hff_to_literature.py  test_config.py  test_download_catalogs.py  test_family_partition.py  test_magnitude_likelihood.py  test_model.py  test_multi_cluster_solver.py  test_plot_extra_image_cutouts.py  test_plot_image_catalog_family_cutouts.py  test_plot_literature_family_cutouts.py  test_plotting.py  test_rgb.py  test_stage_literature_lenstool_catalogs.py  test_validation.py
(+126 files in other folders)
