[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lenscluster"
version = "0.1.0"
description = "Cluster strong-lensing inference utilities."
requires-python = ">=3.11"
dependencies = [
    "astropy>=5",
    "blackjax>=1.5",
    "jax-cosmo>=0.1.0",
    "jax>=0.4",
    "matplotlib>=3.7",
    "photutils>=2.0",
    "PyYAML>=6",
    "rich>=13",
    "scikit-image>=0.22",
    "scipy>=1.10",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: validation tests that run inference or require a full JAX runtime",
]
